--- a/angular-peliculas/src/app/actores/editar-actor/editar-actor.component.html
+++ b/angular-peliculas/src/app/actores/editar-actor/editar-actor.component.html
@@ -1,1 +1,3 @@
-El id del actor a editar es: {{id}}
+<h2>Editar Actor</h2>
+
+<app-formulario-actores (posteoFormulario)="guardarCambios($event)" [modelo]="actor"></app-formulario-actores>
