--- a/angular-peliculas/src/app/actores/formulario-actores/formulario-actores.component.html
+++ b/angular-peliculas/src/app/actores/formulario-actores/formulario-actores.component.html
@@ -2,14 +2,20 @@
     <mat-form-field appearance="outline">
         <mat-label>Nombre</mat-label>
         <input matInput [formControl]="form.controls.nombre" />
-        <mat-error></mat-error>
+        <mat-error>{{obtenerErrorCampoNombre()}}</mat-error>
     </mat-form-field>
     <mat-form-field appearance="outline">
-        <mat-label>Nombre</mat-label>
+        <mat-label>Fecha Nacimiento</mat-label>
         <input matInput [matDatepicker]="picker" [formControl]="form.controls.fechaNacimiento" />
         <mat-datepicker #picker></mat-datepicker>
         <mat-datepicker-toggle matTextSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-error>{{obtenerErrorCampoFechaNacimiento()}}</mat-error>
     </mat-form-field>
+    <div>
+        <app-input-img 
+        [urlImagenActual]="modelo?.foto"
+        titulo="Foto del Actor" (archivoSeleccionado)="archivoSeleccionado($event)"></app-input-img>
+    </div>
     <div class="contenedor-botones">
         <button type="submit" mat-flat-button [disabled]="form.invalid">Guardar cambios</button>
         <a mat-stroked-button routerLink="/actores">Cancelar</a>
