--- a/angular-peliculas/src/styles.css
+++ b/angular-peliculas/src/styles.css
@@ -25,3 +25,11 @@ mat-form-field {
 .contenedor-botones button {
     margin-right: 1rem;
 }
+
+.indice-elementos {
+    margin-top: 1rem;
+}
+
+.indice-elementos a {
+    margin-right: 1rem;
+}
