--- a/angular-peliculas/src/app/generos/indice-generos/indice-generos.component.html
+++ b/angular-peliculas/src/app/generos/indice-generos/indice-generos.component.html
@@ -19,7 +19,10 @@
                 <th mat-header-cell *matHeaderCellDef>Acciones</th>
                 <td mat-cell *matCellDef = "let elemento">
                     <a routerLink="/generos/editar/{{elemento.id}}" mat-flat-button>Editar</a>
-                    <button mat-flat-button color="warn">Borrar</button>
+                    <button mat-flat-button color="warn" 
+                    [swal]="{title:'Confirmación', text:'¿Deseas borrar este registro?', showCancelButton: true}"
+                    (confirm)="borrar(elemento.id)"
+                    >Borrar</button>
                 </td>
             </ng-container>
 
@@ -27,7 +30,9 @@
             <tr mat-row *matRowDef="let row; columns: columnasAMostrar"></tr>
         </table>
 
-        <mat-paginator showFirstLastButtons [length]="cantidadTotalRegistros" [pageSize]="paginacion.recordsPorPagina"
+        <mat-paginator showFirstLastButtons [length]="cantidadTotalRegistros" 
+        [pageIndex]="paginacion.pagina - 1"
+        [pageSize]="paginacion.recordsPorPagina"
         [pageSizeOptions]="[5, 10, 50]" class="mat-elevation-z8" (page)="actualizarPaginacion($event)"></mat-paginator>
     </ng-container>
 </app-listado-generico>
