--- a/angular-peliculas/src/app/actores/crear-actor/crear-actor.component.html
+++ b/angular-peliculas/src/app/actores/crear-actor/crear-actor.component.html
@@ -1,3 +1,5 @@
 <h2>Crear Actor</h2>
 
+<app-mostrar-errores [errores]="errores"></app-mostrar-errores>
+
 <app-formulario-actores (posteoFormulario)="guardarCambios($event)"></app-formulario-actores>
