--- a/angular-peliculas/src/app/peliculas/listado-peliculas/listado-peliculas.component.html
+++ b/angular-peliculas/src/app/peliculas/listado-peliculas/listado-peliculas.component.html
@@ -3,19 +3,20 @@
     <div class="peliculas-contenedor">
       @for (pelicula of peliculas; track $index) {
         <div class="pelicula-contenedor">
-          <a>
-            @if (pelicula.poster) {
+          <a [routerLink]="['/pelicula', pelicula.id]">
+            @if(pelicula.poster){
               <img [src]="pelicula.poster" width="169" height="250" />
             } @else {
-              <img src="default.jpg" width="169" height="250" />
+              <img srcc="default.jpg" width="169" height="250" />
             }
           </a>
           <p>
-            <a>{{pelicula.titulo}}</a>
+            <a [routerLink]="['/pelicula', pelicula.id]">{{pelicula.titulo}}</a>
           </p>
           <div>
-            <a mat-flat-button>Editar</a>
-            <button mat-flat-button type="button" color="warn">Borrar</button>
+            <a mat-flat-button [routerLink]="['/peliculas/editar', pelicula.id]">Editar</a>
+            <button mat-flat-button type="button" color="warn" [swal]="{title: 'Confirmación', 
+              text: '¿Deseas borrar el registro?', showCancelButton: true}" (confirm)="borrar(pelicula.id)" >Borrar</button>
           </div>
         </div>
       }
