--- a/angular-peliculas/src/app/compartidos/componentes/indice-entidad/indice-entidad.component.html
+++ b/angular-peliculas/src/app/compartidos/componentes/indice-entidad/indice-entidad.component.html
@@ -12,7 +12,7 @@
                         <th mat-header-cell *matHeaderCellDef>Acciones</th>
                         <td mat-cell *matCellDef="let elemento">
                             <a routerLink="{{rutaEditar + '/' + elemento.id}}" mat-flat-button>Editar</a>
-                            <button mat-flat-button color="warn" 
+                            <button mat-flat-button class="warn" 
                             [swal]="{title: 'Confirmación', text:'¿Deseas borrar este registro?', showCancelButton: true}"
                             (confirm)="borrar(elemento.id)" 
                             >Borrar</button>
