--- a/angular-peliculas/src/app/peliculas/filtro-peliculas/filtro-peliculas.component.html
+++ b/angular-peliculas/src/app/peliculas/filtro-peliculas/filtro-peliculas.component.html
@@ -26,14 +26,14 @@
     </div>
 
     <div>
-        <button (click)="limpiar()" mat-flat-button color="warn">Limpiar</button>
+        <button (click)="limpiar()" mat-flat-button class="warn">Limpiar</button>
     </div>
 
 </form>
 
 <app-listado-peliculas [peliculas]="peliculas"></app-listado-peliculas>
 
-<mat-paginator showFirstLastButtons [length]="cantidadTotalRegistros" [pageIndex]="paginacion.pagina"
+<mat-paginator showFirstLastButtons [length]="cantidadTotalRegistros" [pageIndex]="paginacion.pagina-1"
 [pageSize]="paginacion.recordsPorPagina" [pageSizeOptions]="[5, 10, 50]" class="mat-elevation-z8"
 (page)="actualizarPaginacion($event)"
 ></mat-paginator>
