--- a/angular-peliculas/src/app/compartidos/componentes/menu/menu.component.css
+++ b/angular-peliculas/src/app/compartidos/componentes/menu/menu.component.css
@@ -8,3 +8,12 @@ mat-toolbar {
 app-autorizado {
     display: flex;
 }
+
+.espacio{
+    flex: 1 1 auto
+}
+
+.saludo {
+    font-size: 18px;
+    display: inline
+}
