--- a/angular-peliculas/src/app/compartidos/componentes/menu/menu.component.html
+++ b/angular-peliculas/src/app/compartidos/componentes/menu/menu.component.html
@@ -28,6 +28,24 @@
             <div>
                 <a mat-button routerLink="peliculas/crear">Crear Pélicula</a>
             </div>
+            
+            <div>
+                <a mat-button routerLink="usuarios">Usuarios</a>
+            </div>
+        </ng-container>
+    </app-autorizado>
+
+    <div class="espacio"></div>
+
+    <app-autorizado style="display:inline">
+        <ng-container autorizado>
+            <span class="saludo">Hola, {{seguridadService.obtenerCampoJWT('email')}}</span>
+            <a mat-button (click)="seguridadService.logout()">Logout</a>
+        </ng-container>
+
+        <ng-container noAutorizado>
+            <a mat-button routerLink="login">Login</a>
+            <a mat-button routerLink="registrar">Registro</a>
         </ng-container>
     </app-autorizado>
 </mat-toolbar>
